KubernetesMeshIstio/03-01/default_destination_rule.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "mtls"
spec:
  host: "*"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
